--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,14 @@ edition = "2024"
 # templating
 handlebars = {version = "6.3.2"}
 
+# HTML manipulation
+
 # proc macros
 syn = {version = "2.0.104"}
 
 # server side
-hyper = { version = "1", features = ["full"] }
+axum = {version = "0.5"}
 tokio = { version = "1", features = ["full"] }
-http-body-util = "0.1"
-hyper-util = { version = "0.1", features = ["full"] }
 
 # json
 serde = { version = "1.0", features = ["derive"] }
